--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <html>
-  <h2>Hello World</h2>
+  <head>
+    <title>My Personal Website</title>
+  </head>
+
+  <body>
+    <head>
+      <h1>Hello World</h1>
+      <h2>Hello World</h2>
+      <h3>Hello World</h3>
+      <h4>Hello World</h4>
+      <h5>Hello World</h5>
+    </head>
+  </body>
 </html>
